# uni-react

./: .gitignore  README.md  README_CN.md  pyproject.toml
configs/: README.md  finetune_qm9_all.yaml  finetune_qm9_gap.yaml
configs/gotennet_b/: cdft.yaml  density.yaml  geometric.yaml  qm9.yaml  reaction.yaml
configs/gotennet_b_hat/: cdft.yaml  density.yaml  geometric.yaml  qm9.yaml  reaction.yaml
configs/gotennet_l/: cdft.yaml  density.yaml  (+5 more)
scripts/: check_tar_integrity.py  common_torchrun.sh  compare_qm9_mae_all.sh  convert_legacy_pretrain_ckpt.py  preload_data.py  probe_max_batch_size.sh  qm9_r2_defaults.sh  train_pretrain_cdft.sh  train_pretrain_density.sh  train_pretrain_geometric.sh  train_pretrain_reaction.sh  train_qm9_all_targets.sh  train_qm9_all_targets_gotennet_l.sh  train_qm9_all_targets_gotennet_l_scratch.sh  train_qm9_all_targets_reacformer_hybrid.sh  train_qm9_all_targets_reacformer_hybrid_scratch.sh  train_qm9_all_targets_reacformer_se3.sh  train_qm9_all_targets_reacformer_se3_scratch.sh  train_qm9_all_targets_reacformer_so2.sh  train_qm9_all_targets_reacformer_so2_scratch.sh  train_qm9_all_targets_scratch.sh  train_qm9_all_targets_single_mol.sh  train_qm9_all_targets_single_mol_scratch.sh  train_qm9_pretrain_cdft.sh  train_qm9_pretrain_geometric.sh  train_qm9_pretrain_reaction.sh
uni_react/: __init__.py  logger.py  train_cdft.py  train_density.py  train_finetune_qm9.py  train_geometric.py  train_joint.py  train_pretrain_cdft.py  train_pretrain_density.py  train_pretrain_geometric.py  train_pretrain_reaction.py  train_qm9.py  train_reaction.py
(+312 files in other folders)
